# virus

./: CMakeLists.txt  README.md  detection.c  detection.h  infection.c  infection.h  init.sh  mediaplayer.c  mediaplayer.h  scanner.c  scanner.h  transfert.c  transfert.h
include/: find_exec.h  open_image.h
src/: find_exec.c  main.c  open_image.c
